--- a/manifest.yml
+++ b/manifest.yml
@@ -10,6 +10,6 @@ applications:
   memory: 256M
   instances: 1
   services:
-  - Conversation-abbas
+  Conversation-abbas
   env:
     NPM_CONFIG_PRODUCTION: false
